--- a/system-setup.yml
+++ b/system-setup.yml
@@ -147,3 +147,8 @@
         name: python3-dev
         state: present
         update_cache: yes
+
+    - name: Install bash-aliases
+      shell: bash <(curl -sS https://raw.githubusercontent.com/mariugul/bash-aliases/main/install.sh)
+      args:
+        creates: ~/.bash_aliases
